[gd_scene load_steps=10 format=3 uid="uid://dcjoexv5aerp"]

[ext_resource type="Script" path="res://golem.gd" id="1_3yl7p"]
[ext_resource type="Texture2D" uid="uid://cdohgtkh12xak" path="res://sprites/golemBoss-Sheet.png" id="1_s80jd"]

[sub_resource type="Animation" id="Animation_86apg"]
resource_name = "Idle"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../GolemHurtbox:polygon")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [PackedVector2Array(6, 0, 24, -42, 8, -88, -8, -88, -24, -42, -10, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../GolemHurtbox:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_jny1s"]
resource_name = "Jump"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(0, 6), Vector2i(1, 6)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../GolemHurtbox:polygon")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [PackedVector2Array(44, 0, 44, -44, 4, -74, -6, -74, -46, -44, -46, 0), PackedVector2Array(34, 0, 34, -44, 4, -62, -8, -62, -38, -42, -36, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../GolemHurtbox:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-8, 0)]
}

[sub_resource type="Animation" id="Animation_5lxil"]
resource_name = "JumpStart"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 5), Vector2i(1, 5), Vector2i(2, 5), Vector2i(3, 5), Vector2i(4, 5), Vector2i(5, 5), Vector2i(6, 5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../GolemHurtbox:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-4, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../GolemHurtbox:polygon")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [PackedVector2Array(21, -4, 35, -32, 5, -82, -11, -78, -19, -22, -4, 0), PackedVector2Array(12, -2, 28, -32, -14, -78, -28, -70, -24, -22, -8, 0), PackedVector2Array(12, -2, 26, -32, -14, -78, -28, -70, -24, -22, -8, 0)]
}

[sub_resource type="Animation" id="Animation_k6614"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StompArea2D/StompHitbox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../GolemHurtbox:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../GolemHurtbox:polygon")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [PackedVector2Array(8, 0, 24, -42.6667, 10.6667, -88, -10.6667, -88, -24, -42.6667, -10.6667, 0)]
}

[sub_resource type="Animation" id="Animation_qgsvv"]
resource_name = "RockPickup"

[sub_resource type="Animation" id="Animation_5d8rx"]
resource_name = "Stomp"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"handle_golem_stomp_move"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("StompArea2D/StompHitbox:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.4, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rnkic"]
_data = {
"Idle": SubResource("Animation_86apg"),
"Jump": SubResource("Animation_jny1s"),
"JumpStart": SubResource("Animation_5lxil"),
"RESET": SubResource("Animation_k6614"),
"RockPickup": SubResource("Animation_qgsvv"),
"Stomp": SubResource("Animation_5d8rx")
}

[node name="Golem" type="CharacterBody2D"]
scale = Vector2(4, 4)
collision_layer = 4
script = ExtResource("1_3yl7p")

[node name="GolemSprite" type="Sprite2D" parent="."]
texture = ExtResource("1_s80jd")
centered = false
offset = Vector2(-66, -130)
hframes = 8
vframes = 7

[node name="StompArea2D" type="Area2D" parent="GolemSprite"]
collision_layer = 8
collision_mask = 2

[node name="StompHitbox" type="CollisionPolygon2D" parent="GolemSprite/StompArea2D"]
polygon = PackedVector2Array(2.66667, 0, 2.66667, -40, -29.3333, -40, -26.6667, -16, -18.6667, -5.33333, -8, 0)
disabled = true

[node name="AP" type="AnimationPlayer" parent="."]
root_node = NodePath("../GolemSprite")
libraries = {
"": SubResource("AnimationLibrary_rnkic")
}

[node name="GolemHurtbox" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(8, 0, 24, -42.6667, 10.6667, -88, -10.6667, -88, -24, -42.6667, -10.6667, 0)

[node name="AttackCooldownTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="GolemSprite/StompArea2D" to="." method="_on_stomp_area_2d_body_entered"]
[connection signal="animation_finished" from="AP" to="." method="_on_animation_finished"]
